crates/formatter/tests/snapshots/snapshots__synapse__main__delta__58__14events_instance_name.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2020 The Matrix.org Foundation C.I.C.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

create sequence if not exists events_stream_seq;

select
	setval(
		'events_stream_seq',
		(select coalesce(max(stream_ordering), 1) from events)
	);

create sequence if not exists events_backfill_stream_seq;

-- If the server has never backfilled a room then doing `-MIN(...)` will give
-- a negative result, hence why we do `GREATEST(...)`
select
	setval(
		'events_backfill_stream_seq',
		(select greatest(coalesce(-min(stream_ordering), 1), 1) from events)
	);
